--- a/libgcc/contrib/gcc-12/libgcc/ChangeLog
+++ b/libgcc/contrib/gcc-12/libgcc/ChangeLog
@@ -1,3 +1,24 @@
+2024-06-20  Release Manager
+
+	* GCC 12.4.0 released.
+
+2024-06-12  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	Backported from master:
+	2024-06-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	PR target/115360
+	* config/arm/cmse_nonsecure_call.S: Add .type and .size directives.
+
+2024-04-12  Iain Sandoe  <iain@sandoe.co.uk>
+
+	Backported from master:
+	2022-12-24  Iain Sandoe  <iain@sandoe.co.uk>
+
+	* config/t-slibgcc-darwin (install-darwin-libgcc-stubs): Skip the
+	install of libgcc_s.1.dylib when the installation is into the build
+	gcc directory.
+
 2024-01-13  Sandra Loosemore  <sandra@codesourcery.com>
 
 	Backported from master:
